Fixed overflow

--- a/client/src/app/pages/main/main.component.scss
+++ b/client/src/app/pages/main/main.component.scss
@@ -18,20 +18,34 @@
   );
   & .main {
     width: 100%;
-    height: 90vh;
+    height: 75%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    overflow-x: scroll; 
+    margin: 0 auto;
     & .date_timer {
-      width: 50%;
       // border: 1px solid red;
+      width: 50%;
+      margin-bottom: 30px;
+      & .timer {
+        display: flex;
+        align-items: center;
+        margin-top: 8px;
+        gap: 5px;
+        & strong {
+          font-size: 24px;
+        }
+      }
     }
-    
+
     & .box_container {
-      overflow-x: scroll; 
-      width: 800px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      overflow-x: scroll;
+      margin: 0 auto;
       & .boxes {
         display: flex;
         justify-content: center;
@@ -39,15 +53,48 @@
         gap: 10px;
         margin-bottom: 20px;
         & .box {
+          width: 130px;
+          height: 40px;
           display: flex;
           justify-content: center;
           align-items: center;
-          width: 130px;
-          height: 40px;
           border-radius: 5px;
           background-color: #fff;
           box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px,
             rgba(0, 0, 0, 0.24) 0px 1px 2px;
+          cursor: pointer;
+        }
+        & .box:hover {
+          opacity: 0.8;
+        }
+      }
+    }
+  }
+  & .done_btn {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    & button {
+      width: 150px;
+      height: 45px;
+    }
+  }
+}
+
+@media (min-width: 676px) {
+  .main_container {
+    & .main {
+      & .date_timer {
+        margin-left: 100px;
+      }
+      & .box_container {
+        width: 70%;
+        & .boxes {
+          gap: 20px;
+          & .box {
+            width: 150px;
+            height: 40px;
+          }
         }
       }
     }
